--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,8 @@ train:
     - 0.9
     - 0.999
   random_seed: 543
-  n_epidode: 1000
+  n_epidode: 1200
   n_timesteps: 2000
   clip_param: 0.2
+  update_freq: 1 # 4th episode
+  store_plotting_data: 50
